# machine-learning-zoocamp

./: Dockerfile  README.md  homework_byme.ipynb
01-intro/: Untitled.ipynb  homework.ipynb
02-regression/: homework-byme.ipynb
03-classification/: homework-byme.ipynb
04-evaluation/: homework-byme.ipynb
05-deployment/: Dockerfile  app.py  homework-byme.ipynb  homework_byme.ipynb  main.py  test_api.py
08-deep-learning/: homework_byme.ipynb
09-serverless/: homework_byme.ipynb
10-kubernetes/: homework_byme.ipynb
Capstone 1/: README.md
Capstone1/: Dockerfile  ModelVerify.py  README.md  config.yaml  notebook.ipynb  predict.py  requirements.txt  train.py
Capstone2/: .gitattributes  Dockerfile  K8sVerify.py  Makefile  README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt
Capstone2/config/: model.yaml
Capstone2/k8s/: deployment.yaml  hpa.yaml  load_test.py  namespace.yaml  service.yaml
Capstone2/logs/: predictions.jsonl
Capstone2/models/: model.pt
Capstone2/monitoring/: evidently_report.py
Capstone2/src/: config.py  drift.py  inference.py  model.py  monitoring.py  preprocessing.py  train.py
Capstone2/tests/: test_preprocessing.py
Capstone3/: .gitattributes  Dockerfile  K8sVerify.py  Makefile  README.md  main.py  notebook1.ipynb  notebook2.ipynb  pyproject.toml  requirements.txt
Capstone3/config/: model.yaml
Capstone3/k8s/: deployment.yaml  namespace.yaml  service.yaml
Capstone3/model/: model.pt
Capstone3/notebooks/: bert_exploration.nbconvert.ipynb  (+2 more)
k8s/: service.yaml
src/: inference.py  monitoring.py
(+10 files in other folders)
